--- a/Still Marker/Still Marker.entitlements
+++ b/Still Marker/Still Marker.entitlements
@@ -12,5 +12,9 @@
     <array>
         <string>/tmp/</string>
     </array>
+    <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+    <true/>
+    <key>com.apple.security.cs.disable-library-validation</key>
+    <true/>
 </dict>
 </plist>
